--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
     "rimraf": "^5.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
